test/fail_compilation/test7816a.d
interface Foo
{
    void call(T)(T t) {}
}

void test()
{
    Foo foo;
    foo.call(2);
}
